# ecs-engine

./: CMakeLists.txt  run.sh
_cmake/: CPM.cmake
engine/: CMakeLists.txt
engine/component/: animation.hpp
engine/core/: engine.cpp  engine.hpp
engine/entity/: entity.hpp
engine/interface/: color.hpp  inputer.cpp  renderer.cpp  renderer.hpp
engine/resource/: resource_manager.hpp
engine/system/: input.hpp  physics.hpp
engine/utils/: memory.hpp
games/flappy/: CMakeLists.txt
games/flappy/src/: ground.cpp  pipe.cpp  player.cpp
old_game/: main.cpp
